--- a/postion_calibration/packages/gaussian/pubspec.yaml
+++ b/postion_calibration/packages/gaussian/pubspec.yaml
@@ -7,7 +7,8 @@ environment:
   sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
-
+  equatable: ^2.0.3
+  
 dev_dependencies:
   mocktail: ^0.3.0
   test: ^1.19.2
