--- a/postion_calibration/packages/ion_response/pubspec.yaml
+++ b/postion_calibration/packages/ion_response/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   dartz: ^0.10.1
+  equatable: ^2.0.3
   freezed_annotation: ^2.1.0
   gaussian:
     path: ../gaussian
